[package]
name = "skylark"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
build = "build.rs"

[[bin]]
name = "skylark"

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"

sc-cli = { version = "0.8.0-alpha.7" }
sp-core = { version = "2.0.0-alpha.7" }
sc-executor = { version = "0.8.0-alpha.7" }
sc-service = { version = "0.8.0-alpha.7" }
sp-inherents = { version = "2.0.0-alpha.7" }
sc-transaction-pool = { version = "2.0.0-alpha.7" }
sp-transaction-pool = { version = "2.0.0-alpha.7" }
sc-network = { version = "0.8.0-alpha.7" }
sc-consensus-babe = { version = "0.8.0-alpha.7" }
sp-consensus-babe = { version = "0.8.0-alpha.7" }
sp-consensus = { version = "0.8.0-alpha.7" }
sc-finality-grandpa = { version = "0.8.0-alpha.7" }
sp-finality-grandpa = { version = "2.0.0-alpha.7" }
sc-consensus = { version = "0.8.0-alpha.7" }
sc-client-api = { version = "2.0.0-alpha.7" }
sp-runtime = { version = "2.0.0-alpha.7" }
sc-basic-authorship = { version = "0.8.0-alpha.7" }
runtime = { package = "skylark-runtime", path = "../runtime" }

module-primitives = { path = "../modules/primitives", default-features = false }

[build-dependencies]
vergen = "3.0.4"
build-script-utils = { version = "2.0.0-alpha.7", package = "substrate-build-script-utils" }
