[package]
name = "skylark"
version = "0.1.0"
authors = ["Skylark Developers"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "skylark"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
serde = { version = "1.0.102", features = ["derive"] }
#futures = { version = "0.3.1", features = ["compat"] }
futures = "0.3.4"
hex-literal = "0.2.1"
jsonrpc-core = "14.0.3"
log = "0.4.8"
structopt = "0.3.8"
parking_lot = "0.10.0"

# substrate primitives
sp-consensus-babe = { version = "0.8.0-alpha.8" }
sp-finality-grandpa = { version = "2.0.0-alpha.8" }
sp-consensus = { version = "0.8.0-alpha.8" }
sp-core = { version = "2.0.0-alpha.8" }
sp-inherents = { version = "2.0.0-alpha.8" }
sp-runtime = { version = "2.0.0-alpha.8" }
sp-keyring = { version = "2.0.0-alpha.8" }
sp-timestamp = { version = "2.0.0-alpha.8" }
sp-transaction-pool = { version = "2.0.0-alpha.8" }
sp-api = { version = "2.0.0-alpha.8" }
sp-blockchain = { version = "2.0.0-alpha.8" }

# substrate client dependencies
sc-basic-authorship = { version = "0.8.0-alpha.8" }
sc-chain-spec = { version = "2.0.0-alpha.8" }
sc-executor = { version = "0.8.0-alpha.8" }
sc-service = { version = "0.8.0-alpha.8" }
sc-transaction-pool = { version = "2.0.0-alpha.8" }
sc-network = { version = "0.8.0-alpha.8" }
sc-consensus-babe = { version = "0.8.0-alpha.8" }
sc-consensus = { version = "0.8.0-alpha.8" }
sc-consensus-babe-rpc = { version = "0.8.0-alpha.8" }
sc-consensus-epochs = { version = "0.8.0-alpha.8" }
sc-finality-grandpa = { version = "0.8.0-alpha.8" }
sc-finality-grandpa-rpc = { version = "0.8.0-alpha.8" }
sc-client-api = { version = "2.0.0-alpha.8" }
sc-client-db = { version = "0.8.0-alpha.8" }
sc-offchain = { version = "2.0.0-alpha.8" }
sc-rpc = { version = "2.0.0-alpha.8" }
sc-keystore = { version = "2.0.0-alpha.8" }
sc-cli = { version = "0.8.0-alpha.8" }
substrate-frame-rpc-system = { version = "2.0.0-alpha.8" }
sc-telemetry = { version = "2.0.0-alpha.8" }

# substrate frame dependencies
frame-benchmarking-cli = { version = "2.0.0-alpha.8" }
frame-benchmarking = { version = "2.0.0-alpha.8" }
pallet-indices = { version = "2.0.0-alpha.8" }
pallet-timestamp = { version = "2.0.0-alpha.8" }
pallet-contracts = { version = "2.0.0-alpha.8" }
pallet-contracts-rpc = { version = "0.8.0-alpha.8" }
pallet-transaction-payment-rpc = { version = "2.0.0-alpha.8" }

# skylark node dependencies
runtime = { package = "skylark-runtime", path = "../runtime" }
primitives = { package = "module-primitives", path = "../modules/primitives", default-features = false }
inspect = { package = "module-inspect", path = "../modules/inspect", default-features = false }


[build-dependencies]
vergen = "3.0.4"
substrate-build-script-utils = { version = "2.0.0-alpha.8" }
