[package]
name = "skylark-runtime"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

pallet-babe = { version = "2.0.0-alpha.7", default-features = false }
pallet-balances = { version = "2.0.0-alpha.7", default-features = false }
frame-support = { version = "2.0.0-alpha.7", default-features = false }
pallet-grandpa = { version = "2.0.0-alpha.7", default-features = false }
pallet-indices = { version = "2.0.0-alpha.7", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.0-alpha.7", default-features = false }
pallet-sudo = { version = "2.0.0-alpha.7", default-features = false }
pallet-session = { version = "2.0.0-alpha.7", default-features = false }
pallet-staking-reward-curve = { version = "2.0.0-alpha.7", default-features = false }
pallet-staking = { version = "2.0.0-alpha.7", default-features = false }
pallet-treasury = { version = "2.0.0-alpha.7", default-features = false }
pallet-collective = { version = "2.0.0-alpha.7", default-features = false }
frame-system = { version = "2.0.0-alpha.7", default-features = false }
pallet-timestamp = { version = "2.0.0-alpha.7", default-features = false }
pallet-transaction-payment = { version = "2.0.0-alpha.7", default-features = false }
frame-executive = { version = "2.0.0-alpha.7", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "2.0.0-alpha.7", default-features = false }
sp-block-builder = { version = "2.0.0-alpha.7", default-features = false }
sp-consensus-babe = { version = "0.8.0-alpha.7", default-features = false }
sp-core = { version = "2.0.0-alpha.7", default-features = false }
sp-inherents = { version = "2.0.0-alpha.7", default-features = false }
sp-io = { version = "2.0.0-alpha.7", default-features = false }
sp-offchain = { version = "2.0.0-alpha.7", default-features = false }
sp-runtime = { version = "2.0.0-alpha.7", default-features = false }
sp-session = { version = "2.0.0-alpha.7", default-features = false }
sp-staking = { version = "2.0.0-alpha.7", default-features = false }
sp-std = { version = "2.0.0-alpha.7", default-features = false }
sp-transaction-pool = { version = "2.0.0-alpha.7", default-features = false }
sp-version = { version = "2.0.0-alpha.7", default-features = false }

template = { package = "module-template", path = "../modules/template", default-features = false }
module-primitives = { path = "../modules/primitives", default-features = false }
module-opus = { path = "../modules/opus", default-features = false }
module-interaction = { path = "../modules/interaction", default-features = false }
module-curated-group = { path = "../modules/curated-group", default-features = false }
module-tcx = { path = "../modules/tcx", default-features = false }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-babe/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-indices/std",
    "pallet-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-session/std",
    "pallet-staking/std",
    "pallet-treasury/std",
    "pallet-collective/std",
    "serde",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-babe/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "template/std",
    "module-primitives/std",
    "module-opus/std",
    "module-interaction/std",
    "module-curated-group/std",
    "module-tcx/std"
]
