[package]
name = "skylark-runtime"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }
static_assertions = "1.1.0"

# substrate primitives
sp-api = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
sp-block-builder = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
sp-consensus-babe = { version = "0.8.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v0.8.0-alpha.8" }
sp-core = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
sp-inherents = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
sp-offchain = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
sp-runtime = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
sp-keyring = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
sp-session = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
sp-staking = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
sp-std = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
sp-transaction-pool = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
sp-version = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }

# substrate frame dependencies
frame-executive = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
frame-support = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
frame-system = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
frame-system-rpc-runtime-api = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-babe = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-balances = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-grandpa = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-finality-tracker = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-indices = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-randomness-collective-flip = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-sudo = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-session = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-staking-reward-curve = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-staking = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-timestamp = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-transaction-payment = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-democracy = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-collective = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-elections-phragmen = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-membership = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-treasury = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-contracts = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-contracts-primitives = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
pallet-contracts-rpc-runtime-api = { version = "0.8.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v0.8.0-alpha.8" }
pallet-utility  = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }

# skylark dependencies
template = { package = "module-template", path = "../modules/template", default-features = false }
module-primitives = { path = "../modules/primitives", default-features = false }
module-opus = { path = "../modules/opus", default-features = false }
module-interaction = { path = "../modules/interaction", default-features = false }
module-curated-group = { path = "../modules/curated-group", default-features = false }
module-tcx = { path = "../modules/tcx", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }

[build-dependencies]
wasm-builder-runner = { version = "1.0.6", package = "substrate-wasm-builder-runner" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-babe/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-keyring/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-babe/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-indices/std",
    "pallet-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-session/std",
    "pallet-staking/std",
    "pallet-treasury/std",
    "pallet-collective/std",
    "pallet-democracy/std",
    "pallet-membership/std",
    "pallet-elections-phragmen/std",
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",
    "pallet-utility/std",
    "template/std",
    "module-primitives/std",
    "module-opus/std",
    "module-interaction/std",
    "module-curated-group/std",
    "module-tcx/std"
]
