[package]
authors = ['Anonymous']
edition = '2018'
name = 'module-interaction'
version = '0.1.0'

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-rc2", default-features = false }
sp-runtime = { version = "2.0.0-rc2", default-features = false }
frame-support = { version = "2.0.0-rc2", default-features = false }
frame-system = { version = "2.0.0-rc2", default-features = false }
opus = { package = "module-opus", path = "../opus", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0-rc2", default-features = false }
sp-core = { version = "2.0.0-rc2", default-features = false }


[features]
default = ['std']
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "opus/std"
]
