[package]
authors = ['Anonymous']
edition = '2018'
name = 'module-primitives'
version = '0.1.0'

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
sp-core = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
sp-runtime = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }

[features]
default = ['std']
std = [
    "serde",
    "codec/std",
    "sp-core/std",
    "sp-runtime/std"
]
