[package]
authors = ['Anonymous']
edition = '2018'
name = 'module-template'
version = '0.1.0'

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
sp-runtime = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
frame-support = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
frame-system = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }

[dev-dependencies]
sp-io = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }
sp-core = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.8" }


[features]
default = ['std']
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std"
]
